# tigernet-scraper

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  scraper.py
src/tigernet_scraper/: main.py
